fixed leetr spacing for player tooltips

--- a/skins/kdark/css/layout.css
+++ b/skins/kdark/css/layout.css
@@ -495,6 +495,7 @@ body { letter-spacing: 0.04em; }
 	box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
 	z-index: 50;
 	font-size: 0.85em;
+    letter-spacing: 0px;
 	color: #555;
 	border-radius: 2px;
 	padding: 2px 5px;
